force-app/main/default/objects/P__c/fields/I2O__c.field-meta.xml
<CustomField>
    <fullName>I2O__c</fullName>
    <label>Intake Gas 2 O-Ring</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intact</fullName>
            </value>
            <value>
                <fullName>Deformation</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>