force-app/main/default/objects/P__c/fields/I__c.field-meta.xml
<CustomField>
    <fullName>I__c</fullName>
    <label>Issues</label>
    <length>100</length>
    <type>Text</type>
</CustomField>