force-app/main/default/objects/P__c/fields/IC__c.field-meta.xml
<CustomField>
    <fullName>IC__c</fullName>
    <label>Intake Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deformation</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Plugged</fullName>
            </value>
            <value>
                <fullName>Scale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>