force-app/main/default/objects/P__c/fields/IE1__c.field-meta.xml
<CustomField>
    <fullName>IE1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake Gas 1 Ext</label>
    <type>Checkbox</type>
</CustomField>