force-app/main/default/objects/P__c/fields/IE2__c.field-meta.xml
<CustomField>
    <fullName>IE2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake Gas 2 Ext</label>
    <type>Checkbox</type>
</CustomField>