force-app/main/default/objects/P__c/fields/IF1__c.field-meta.xml
<CustomField>
    <fullName>IF1__c</fullName>
    <label>Intake Gas 1 Foreign Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scale</fullName>
            </value>
            <value>
                <fullName>Asphaltene</fullName>
            </value>
            <value>
                <fullName>Sand</fullName>
            </value>
            <value>
                <fullName>Paraffin</fullName>
            </value>
            <value>
                <fullName>Well Fluid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>