force-app/main/default/objects/P__c/fields/II1__c.field-meta.xml
<CustomField>
    <fullName>II1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake Gas 1 Int</label>
    <type>Checkbox</type>
</CustomField>