force-app/main/default/objects/P__c/fields/II2__c.field-meta.xml
<CustomField>
    <fullName>II2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intake Gas 2 Int</label>
    <type>Checkbox</type>
</CustomField>