force-app/main/default/objects/P__c/fields/IL1__c.field-meta.xml
<CustomField>
    <fullName>IL1__c</fullName>
    <label>Intake Gas 1 Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>