force-app/main/default/objects/P__c/fields/IS__c.field-meta.xml
<CustomField>
    <fullName>IS__c</fullName>
    <label>Intake Screened</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>