force-app/main/default/objects/P__c/fields/IT1__c.field-meta.xml
<CustomField>
    <fullName>IT1__c</fullName>
    <label>Intake Gas 1 Shaft Rot</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Smooth</fullName>
            </value>
            <value>
                <fullName>Stiff</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Twisted</fullName>
            </value>
            <value>
                <fullName>Side Play</fullName>
            </value>
            <value>
                <fullName>Deposition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>