force-app/main/default/objects/P__c/fields/JN__c.field-meta.xml
<CustomField>
    <fullName>JN__c</fullName>
    <label>Job Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>