force-app/main/default/objects/P__c/fields/K__c.field-meta.xml
<CustomField>
    <fullName>K__c</fullName>
    <label>KOP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>