force-app/main/default/objects/P__c/fields/L__c.field-meta.xml
<CustomField>
    <fullName>L__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seal LT Serial #</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Pulls (Seal LT Serial #)</relationshipLabel>
    <relationshipName>Pulls_Seal_LT</relationshipName>
    <type>Lookup</type>
</CustomField>