force-app/main/default/objects/P__c/fields/LA__c.field-meta.xml
<CustomField>
    <fullName>LA__c</fullName>
    <label>Lower Pigtail Armor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Galv</fullName>
            </value>
            <value>
                <fullName>3SS</fullName>
            </value>
            <value>
                <fullName>Monel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>