force-app/main/default/objects/P__c/fields/LaL__c.field-meta.xml
<CustomField>
    <fullName>LaL__c</fullName>
    <label>Lateral Length</label>
    <length>100</length>
    <type>Text</type>
</CustomField>