force-app/main/default/objects/P__c/fields/LC__c.field-meta.xml
<CustomField>
    <fullName>LC__c</fullName>
    <label>Lower Pigtail Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>