force-app/main/default/objects/P__c/fields/LL__c.field-meta.xml
<CustomField>
    <fullName>LL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease/Well Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Pulls</relationshipLabel>
    <relationshipName>Pulls</relationshipName>
    <type>Lookup</type>
</CustomField>