force-app/main/default/objects/P__c/fields/LM__c.field-meta.xml
<CustomField>
    <fullName>LM__c</fullName>
    <label>Motor LT Bottom Oil Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>