force-app/main/default/objects/P__c/fields/LP__c.field-meta.xml
<CustomField>
    <fullName>LP__c</fullName>
    <label>Lower Pigtail Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>