force-app/main/default/objects/P__c/fields/LPE__c.field-meta.xml
<CustomField>
    <fullName>LPE__c</fullName>
    <label>Lower Pigtail Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>#6</fullName>
            </value>
            <value>
                <fullName>#4</fullName>
            </value>
            <value>
                <fullName>#2</fullName>
            </value>
            <value>
                <fullName>#1</fullName>
            </value>
            <value>
                <fullName>1/O</fullName>
            </value>
            <value>
                <fullName>2/O</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>