force-app/main/default/objects/P__c/fields/LPL__c.field-meta.xml
<CustomField>
    <fullName>LPL__c</fullName>
    <label>Lower Pigtail Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>