force-app/main/default/objects/P__c/fields/LPM__c.field-meta.xml
<CustomField>
    <fullName>LPM__c</fullName>
    <label>Lower Pigtail MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>