force-app/main/default/objects/P__c/fields/LPS__c.field-meta.xml
<CustomField>
    <fullName>LPS__c</fullName>
    <label>Lower Pigtail Serial #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>