force-app/main/default/objects/P__c/fields/LS__c.field-meta.xml
<CustomField>
    <fullName>LS__c</fullName>
    <label>Liner Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>