force-app/main/default/objects/P__c/fields/LT__c.field-meta.xml
<CustomField>
    <fullName>LT__c</fullName>
    <label>Lower Pigtail Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>