force-app/main/default/objects/P__c/fields/LW__c.field-meta.xml
<CustomField>
    <fullName>LW__c</fullName>
    <label>Liner Weight</label>
    <length>100</length>
    <type>Text</type>
</CustomField>