force-app/main/default/objects/P__c/fields/M__c.field-meta.xml
<CustomField>
    <fullName>M__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MLC Serial #</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Pulls (MLC Serial #)</relationshipLabel>
    <relationshipName>Pulls_MLC</relationshipName>
    <type>Lookup</type>
</CustomField>