force-app/main/default/objects/P__c/fields/MAD__c.field-meta.xml
<CustomField>
    <fullName>MAD__c</fullName>
    <label>Damaged?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>