force-app/main/default/objects/P__c/fields/MAL__c.field-meta.xml
<CustomField>
    <fullName>MAL__c</fullName>
    <label>Mandrel Length</label>
    <length>100</length>
    <type>Text</type>
</CustomField>