force-app/main/default/objects/P__c/fields/MAP__c.field-meta.xml
<CustomField>
    <fullName>MAP__c</fullName>
    <label>Mandrel Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>