force-app/main/default/objects/P__c/fields/MAS__c.field-meta.xml
<CustomField>
    <fullName>MAS__c</fullName>
    <label>Mandrel Serial #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>