force-app/main/default/objects/P__c/fields/MAT__c.field-meta.xml
<CustomField>
    <fullName>MAT__c</fullName>
    <label>Mandrel Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>