force-app/main/default/objects/P__c/fields/MB__c.field-meta.xml
<CustomField>
    <fullName>MB__c</fullName>
    <label>Motor CT Bottom Oil Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>