force-app/main/default/objects/P__c/fields/MC__c.field-meta.xml
<CustomField>
    <fullName>MC__c</fullName>
    <label>Motor UT Top Oil Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>