force-app/main/default/objects/P__c/fields/MCE__c.field-meta.xml
<CustomField>
    <fullName>MCE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motor CT Ext</label>
    <type>Checkbox</type>
</CustomField>