force-app/main/default/objects/P__c/fields/MCI__c.field-meta.xml
<CustomField>
    <fullName>MCI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motor CT Int</label>
    <type>Checkbox</type>
</CustomField>