force-app/main/default/objects/P__c/fields/MCL__c.field-meta.xml
<CustomField>
    <fullName>MCL__c</fullName>
    <label>Motor CT Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>