force-app/main/default/objects/P__c/fields/MCM__c.field-meta.xml
<CustomField>
    <fullName>MCM__c</fullName>
    <label>Motor CT MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>