force-app/main/default/objects/P__c/fields/MCO__c.field-meta.xml
<CustomField>
    <fullName>MCO__c</fullName>
    <label>Mandrel Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>