force-app/main/default/objects/P__c/fields/MD__c.field-meta.xml
<CustomField>
    <fullName>MD__c</fullName>
    <label>Set Motor Depth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>