force-app/main/default/objects/P__c/fields/ME__c.field-meta.xml
<CustomField>
    <fullName>ME__c</fullName>
    <label>Motor CT Electrical Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>