force-app/main/default/objects/P__c/fields/MI__c.field-meta.xml
<CustomField>
    <fullName>MI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motor CT Serial #</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Pulls (Motor CT Serial #)</relationshipLabel>
    <relationshipName>Pulls_Motor_CT</relationshipName>
    <type>Lookup</type>
</CustomField>