force-app/main/default/objects/P__c/fields/ML__c.field-meta.xml
<CustomField>
    <fullName>ML__c</fullName>
    <label>Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>