force-app/main/default/objects/P__c/fields/MLC__c.field-meta.xml
<CustomField>
    <fullName>MLC__c</fullName>
    <label>MLC Cable Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>