force-app/main/default/objects/P__c/fields/MLE__c.field-meta.xml
<CustomField>
    <fullName>MLE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motor LT Ext</label>
    <type>Checkbox</type>
</CustomField>