force-app/main/default/objects/P__c/fields/MLF__c.field-meta.xml
<CustomField>
    <fullName>MLF__c</fullName>
    <label>Motor LT Foreign Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scale</fullName>
            </value>
            <value>
                <fullName>Asphaltene</fullName>
            </value>
            <value>
                <fullName>Sand</fullName>
            </value>
            <value>
                <fullName>Paraffin</fullName>
            </value>
            <value>
                <fullName>Well Fluid</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>