force-app/main/default/objects/P__c/fields/MLI__c.field-meta.xml
<CustomField>
    <fullName>MLI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motor LT Int</label>
    <type>Checkbox</type>
</CustomField>