force-app/main/default/objects/P__c/fields/MLL__c.field-meta.xml
<CustomField>
    <fullName>MLL__c</fullName>
    <label>MLC Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>