force-app/main/default/objects/P__c/fields/MLM__c.field-meta.xml
<CustomField>
    <fullName>MLM__c</fullName>
    <label>Motor LT MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>