force-app/main/default/objects/P__c/fields/MLT__c.field-meta.xml
<CustomField>
    <fullName>MLT__c</fullName>
    <label>Motor LT Shaft Rot</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Smooth</fullName>
            </value>
            <value>
                <fullName>Stiff</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Twisted</fullName>
            </value>
            <value>
                <fullName>Side Play</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>