force-app/main/default/objects/P__c/fields/MM__c.field-meta.xml
<CustomField>
    <fullName>MM__c</fullName>
    <label>Motor UT Drag Marks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>