force-app/main/default/objects/P__c/fields/MMF__c.field-meta.xml
<CustomField>
    <fullName>MMF__c</fullName>
    <label>Mandrel MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>