force-app/main/default/objects/P__c/fields/MMM__c.field-meta.xml
<CustomField>
    <fullName>MMM__c</fullName>
    <label>MLC MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>