force-app/main/default/objects/P__c/fields/MN__c.field-meta.xml
<CustomField>
    <fullName>MN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motor UT Serial #</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Pulls (Motor UT Serial #)</relationshipLabel>
    <relationshipName>Pulls_Motor_UT</relationshipName>
    <type>Lookup</type>
</CustomField>