force-app/main/default/objects/P__c/fields/MO__c.field-meta.xml
<CustomField>
    <fullName>MO__c</fullName>
    <label>Motor UT Bottom Oil Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>