force-app/main/default/objects/P__c/fields/MOD__c.field-meta.xml
<CustomField>
    <fullName>MOD__c</fullName>
    <label>Motor Shroud OD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4.5&quot;</fullName>
            </value>
            <value>
                <fullName>5.5&quot;</fullName>
            </value>
            <value>
                <fullName>7.0&quot;</fullName>
            </value>
            <value>
                <fullName>8.625&quot;</fullName>
            </value>
            <value>
                <fullName>9.625&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>