force-app/main/default/objects/P__c/fields/MOS__c.field-meta.xml
<CustomField>
    <fullName>MOS__c</fullName>
    <label>MLC # of Splices</label>
    <length>30</length>
    <type>Text</type>
</CustomField>