force-app/main/default/objects/P__c/fields/MP__c.field-meta.xml
<CustomField>
    <fullName>MP__c</fullName>
    <label>Adapter Seal/MTR Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>