force-app/main/default/objects/P__c/fields/MQ__c.field-meta.xml
<CustomField>
    <fullName>MQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motor LT Serial #</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Pulls (Motor LT Serial #)</relationshipLabel>
    <relationshipName>Pulls_Motors_LT</relationshipName>
    <type>Lookup</type>
</CustomField>