force-app/main/default/objects/P__c/fields/MR__c.field-meta.xml
<CustomField>
    <fullName>MR__c</fullName>
    <label>Motor CT Top Oil Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>