force-app/main/default/objects/P__c/fields/MS__c.field-meta.xml
<CustomField>
    <fullName>MS__c</fullName>
    <label>Series</label>
    <length>100</length>
    <type>Text</type>
</CustomField>