force-app/main/default/objects/P__c/fields/MSC__c.field-meta.xml
<CustomField>
    <fullName>MSC__c</fullName>
    <label>Motor Shroud Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asphaltene</fullName>
            </value>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Corrosion</fullName>
            </value>
            <value>
                <fullName>Drag Marks</fullName>
            </value>
            <value>
                <fullName>Foreign Matter</fullName>
            </value>
            <value>
                <fullName>Parted</fullName>
            </value>
            <value>
                <fullName>Plastic Coated</fullName>
            </value>
            <value>
                <fullName>Plugged</fullName>
            </value>
            <value>
                <fullName>Scale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>