force-app/main/default/objects/P__c/fields/MSI__c.field-meta.xml
<CustomField>
    <fullName>MSI__c</fullName>
    <label>Mandrel Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>