force-app/main/default/objects/P__c/fields/MT__c.field-meta.xml
<CustomField>
    <fullName>MT__c</fullName>
    <label>Adapter Seal/MTR Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>