force-app/main/default/objects/P__c/fields/MTL__c.field-meta.xml
<CustomField>
    <fullName>MTL__c</fullName>
    <label>Motor LT Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>