force-app/main/default/objects/P__c/fields/MTS__c.field-meta.xml
<CustomField>
    <fullName>MTS__c</fullName>
    <label>Motor UT Shaft</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broke</fullName>
            </value>
            <value>
                <fullName>Broke - Twisted</fullName>
            </value>
            <value>
                <fullName>Intact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>