force-app/main/default/objects/P__c/fields/MU__c.field-meta.xml
<CustomField>
    <fullName>MU__c</fullName>
    <label>Motor UT Electrical Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>