force-app/main/default/objects/P__c/fields/MUE__c.field-meta.xml
<CustomField>
    <fullName>MUE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motor UT Ext</label>
    <type>Checkbox</type>
</CustomField>