force-app/main/default/objects/P__c/fields/MUI__c.field-meta.xml
<CustomField>
    <fullName>MUI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motor UT Int</label>
    <type>Checkbox</type>
</CustomField>