force-app/main/default/objects/P__c/fields/MUL__c.field-meta.xml
<CustomField>
    <fullName>MUL__c</fullName>
    <label>Motor UT Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>