force-app/main/default/objects/P__c/fields/MUM__c.field-meta.xml
<CustomField>
    <fullName>MUM__c</fullName>
    <label>Motor UT MFG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>