force-app/main/default/objects/P__c/fields/MUR__c.field-meta.xml
<CustomField>
    <fullName>MUR__c</fullName>
    <label>Motor UT O-Ring</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intact</fullName>
            </value>
            <value>
                <fullName>Deformation</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>