force-app/main/default/objects/P__c/fields/NBJ__c.field-meta.xml
<CustomField>
    <fullName>NBJ__c</fullName>
    <label>No. of Bands per Joint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>