force-app/main/default/objects/P__c/fields/NC__c.field-meta.xml
<CustomField>
    <fullName>NC__c</fullName>
    <label>No. of Bands - MLC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>